# Revit-Journal-Maker

./: .gitignore  JOURNALOBJ.md  README.md  flit.ini  pyproject.toml  todo.todo
dev/: 01.vb  02.vb  JournalFilterStreamBase.html  _BDM_Audit_Purge.vb  _BDM_DimensionSetup.vb  _BDM_RFA.vb  _BDM_RefPlane_NotaRef.vb  _BDM_RefPlane_SubCategories.vb  _BDM_Script_Template.vb  active journal.vb  worksets.vb
rjm/: __init__.py  templates.py
tests/: test.py
