[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "rjm"
author = "Ehsan Iran-Nejad"
author-email = "eirannejad@gmail.com"
home-page = "https://github.com/eirannejad/Revit-Journal-Maker"
description-file = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]

